finish reviewImg directory & create dummy file 25/03/30